[tool.poetry]
name = "dash-callbackmanager"
version = "2.0.0"
description = "Dash callback manager, group callbacks easier within code."
authors = ["Matt Seymour <matt@enveloprisk.com>"]
license = "MIT"
keywords = [
    "dash",
    "callback manager",
]
repository = "https://github.com/envelop-risk/dash-callbackmanager"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
readme = "readme.md"


[tool.poetry.dependencies]
python = ">=3.8, <3.11.0"
dash = "<4.0.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
